# ReproLab

./: .gitignore  CITATION.cff  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  geo_benchmark_strict_results.json  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
analysis_outputs/: GSE3037_high_missingness_baseline_runs.csv  GSE3037_mixed_noise_baseline_runs.csv  GSE32707_high_missingness_baseline_runs.csv
api/: README.md  __init__.py  main.py
docs/: ReproLab_feedback_followup_summary_2026-04-06.docx  ReproLab_v2_changes_summary_2026-04-06.docx  geo_benchmark_team_summary.md  preliminary_results_specific_aims.md  review_outline.md  utility_proof_summary.md
examples/: generate_preliminary_data.py  sample_usage.py
frontend/: .gitignore  README.md  index.html  package.json
frontend/src/: App.css  App.jsx  index.css
outputs/preliminary_data/: lineage_history.csv  preliminary_report.md  transformation_log.csv
results/benchmarks/: geo_benchmark_results.json  utility_proof_results.json
results/preliminary/: dataset_manual_clean.csv  dataset_noisy.csv  dataset_reprolab_clean.csv  preliminary_metrics.csv
results/robustness/: GSE3037_extreme_corruption_baseline_runs.csv  GSE3037_extreme_corruption_combat_like_runs.csv  GSE3037_extreme_corruption_knn_imputation_runs.csv  GSE3037_extreme_corruption_minimal_imputation_runs.csv  (+56 more)
scripts/: geo_benchmark.py  geo_benchmark_strict.py  geo_utility_proof.py
src/reprolab/: __init__.py  (+4 more)
tests/: test_benchmark.py  test_lineage.py  test_preprocessing.py  test_scoring.py  test_validation_engine.py
(+24 files in other folders)
