[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reprolab"
version = "0.1.0"
description = "Reproducible biomedical data preprocessing with clinical validation and lineage."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "ReproLab Contributors" }]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
